--- a/modules/web/src/com/company/navigationeditor/web/customer/messages.properties
+++ b/modules/web/src/com/company/navigationeditor/web/customer/messages.properties
@@ -6,3 +6,4 @@ prevItemIsEmpty=Previous item not found
 nextItemIsEmpty=Next item not found
 saveUnsaved=Do you want to save changes before go to "%s"?
 goToItem=Go to "%s" item
+goToItems=< - >
