Navigation buttons with comboBox

--- a/modules/web/src/com/company/navigationeditor/web/customer/messages.properties
+++ b/modules/web/src/com/company/navigationeditor/web/customer/messages.properties
@@ -2,7 +2,12 @@ browseCaption = Customer browser
 editCaption = Customer editor
 prevItem = Previous item
 nextItem = Next Item
+newItem=New Item
 prevItemIsEmpty=Previous item not found
 nextItemIsEmpty=Next item not found
 saveUnsaved=Do you want to save changes before go to "%s"?
+noChanges=No changes
+saveUnsavedBeforeCreateItem=Do you want to save changes before create item
 goToItem=Go to "%s" item
+createItem=Create
+apply=Apply
